# w3bstream-client-python

./: README.md  __init__.py  benchmark.txt  client.py  pyproject.toml
src/w3bstream_client_python/: client.py
tests/: benchmark.py
w3bstream/: client.py
