[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "w3bstream_client_python"
# version = "0.0.9"
dynamic = ["version"] # use version from git tag
authors = [
    {name = "haaai"}, # TODO: add email
    {name = "chenchen", email = "chen1233216@hotmail.com"},
]
description = "the Official W3bstream Client for Python"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "requests",
    "typeguard",
]

[tool.setuptools_scm]
