[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "w3bstream_client_python"
version = "1.0.1"
# dynamic = ["version"] use version from git tag
description = "Official W3bstream Client for Python"
readme = "README.md"
license = {file = "LICENSE.md"}
dependencies = [
    "requests",
    "typeguard",
]

[tool.setuptools_scm]
